--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,9 @@ install:
   - python setup.py install
 script: python setup.py test
 notifications:
-    email: aaron.iles+travis-ci@gmail.com
+    email:
+      recipients:
+        - aaron.iles+travis-ci@gmail.com
+        - mjdorma+travis-ci@gmail.com
+      on_success: change
+      on_failure: always
